--- a/account.html
+++ b/account.html
@@ -23,21 +23,34 @@
         <fieldset>
             <legend>Inloggen</legend>
 
+<!--
+            <label for="input-name">Voornaam</label>
+            <input id="name" type="text" placeholder="Voornaam" required>
+
+            <label for="input-surname">Achternaam</label>
+            <input id="surname" type="text" placeholder="Achternaam" required>
+
+            <label for="input-email">E-mail</label>
+            <input id="email" type="email" placeholder="gebruiker@mail.nl" required>
+-->
+
             <label for="name">Voornaam</label>
-            <input id="name" required>
+            <input id="name" placeholder="Voornaam" required>
 
             <label for="surname">Achternaam</label>
-            <input id="surname" required>
+            <input id="surname" placeholder="Achternaam" required>
 
-            <label for="mail">E-mail</label>
-            <input id="mail" required>
+            <label for="email">E-mail</label>
+            <input id="email" placeholder="gebruiker@mail.nl" required>
+
 
             <p class="feedback">Het formulier is goed ingevuld!</p>
 
             <a href="./account_ingelogd.html" id="login" type="submit">Inloggen</a>
 
             <p>Nog geen Transavia account?<a href="">Klik hier!</a></p>
-        </fieldset>
+
+         </fieldset>
     </form>
 
     <footer> © Transavia 2018 • Violet Jim</footer>
