--- a/account_ingelogd.html
+++ b/account_ingelogd.html
@@ -20,15 +20,22 @@
     </header>
 
     <section>
+        <div id="sorteren">
+<!--            <p>Sorteer op:</p>-->
+            <button>Opgeslagen</button>
+            <button>Gedownload</button>
+        </div>
+
         <h2>Opgeslagen Verhalen </h2>
 
         <div>
+
             <article>
-                <a href="./verhalen.html"><img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal"></a>
+                <img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Onomatopee</h3>
                     <footer>
-                        <h4>Rating: 5.939</h4>
+                        <h4>Rating 5.985</h4>
                         <ul>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
@@ -37,7 +44,7 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
@@ -56,7 +63,7 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
@@ -75,7 +82,7 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
@@ -94,7 +101,7 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
@@ -113,17 +120,17 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
 
-            <article>
+             <article>
                 <img src="./verhalen/sportcommentaar.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Sportcommentaar</h3>
                     <footer>
-                        <h4>Rating 3.596</h4>
+                        <h4>Rating: 2.592</h4>
                         <ul>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
@@ -132,7 +139,7 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
@@ -142,7 +149,7 @@
                 <div class="verhalen">
                     <h3>Onomatopee</h3>
                     <footer>
-                        <h4>Rating 2.864</h4>
+                        <h4>Rating 2.395</h4>
                         <ul>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
@@ -151,7 +158,7 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
@@ -170,7 +177,7 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
-                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                        <a href=""><img id="hartje" src="images/hartje.svg" alt="hartje"></a>
                     </footer>
                 </div>
             </article>
