Microinteracties en media queries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="./index.html"><img src="./images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
                 <li><a href="./verhalen.html"><img src="./images/verhalen.svg" alt="verhalen">Verhalen</a></li>
-                <li><a href="./account.html"><img src="./images/account.svg" alt="verhalen">Account</a></li>
+                <li><a href="./account.html"><img src="./images/account.svg" alt="verhalen">Account</a><span>1</span></li>
             </ul>
         </nav>
         <h1> 99 Verhalen mee op reis </h1>
@@ -38,8 +38,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -57,8 +57,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -76,8 +76,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -95,8 +95,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -114,8 +114,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -133,8 +133,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -152,8 +152,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -171,8 +171,8 @@
                             <li><img src="images/star.svg" alt="sterretje"></li>
                             <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -230,9 +230,31 @@
             </div>
         </form>
 
-        <a href="./bundel.html#anchor">Stel bundel samen</a>
+        <button>Stel bundel samen</button>
 
     </section>
+
+
+    <!--BUNDEL RESULTAAT MICROINTERACTIE-->
+    <section>
+            <article>
+                <img src="./images/bundels.jpg" alt="afbeelding verhaal">
+                <div class="sideinfo">
+                    <h3>Gepersonaliseerde Bundel</h3>
+                    <ul>
+                        <li>Populair</li>
+                        <li>1 uur</li>
+                        <li>Dramatisch</li>
+                        <li>Angst</li>
+                    </ul>
+                    <footer>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
+                    </footer>
+                </div>
+            </article>
+    </section>
+
 
 
     <!--VOORGESTELDE BUNDELS-->
@@ -247,8 +269,8 @@
                     <h3>Bundel 1</h3>
                     <p>Dramatisch, Angst</p>
                     <footer>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -259,8 +281,8 @@
                     <h3>Bundel 2</h3>
                     <p>Inspirerend, Dramatisch, Vrolijk</p>
                     <footer>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -271,8 +293,8 @@
                     <h3>Bundel 3</h3>
                     <p>Mysterieus, Verdrietig</p>
                     <footer>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -282,8 +304,8 @@
                     <h3>Bundel 4</h3>
                     <p>Dramatisch, Angst</p>
                     <footer>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -294,8 +316,8 @@
                     <h3>Bundel 5</h3>
                     <p>Inspirerend, Dramatisch, Vrolijk</p>
                     <footer>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -306,8 +328,8 @@
                     <h3>Bundel 6</h3>
                     <p>Mysterieus, Verdrietig</p>
                     <footer>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
+                        <button>Download</button>
+                        <button>Leeslijst</button>
                     </footer>
                 </div>
             </article>
@@ -316,7 +338,7 @@
     </section>
 
     <footer> © Transavia 2018 • Violet Jim</footer>
-
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
